--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.1.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "components": "^0.1.0",
     "mdb-react-ui-kit": "^7.2.0",
