--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.1.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "components": "^0.1.0",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
